# pinentry-op

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: main.rs  op.rs  pinentry.rs  session.rs
