# Copyright Jeffrey Sharp
# SPDX-License-Identifier: MIT
#
# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name        = "pinentry-op"
version     = "0.1.0"
authors     = ["Jeffrey Sharp"]
edition     = "2021"
description = "A GPG pinentry program that forwards passhphrase requests to 1Password"
license     = "MIT"
repository  = "https://github.com/sharpjs/pinentry-op"

[dependencies]
